INCLUDE_DIRECTORIES(${Nebula3_SOURCE_DIR}/foundation
                    ${Nebula3_SOURCE_DIR}/extlibs
                    ${Nebula3_SOURCE_DIR}/render
)

SET(Nebula3Render_SRCS
    apprender/asyncrenderapplication.cc
    apprender/asyncrenderapplication.h
    apprender/asyncviewerapplication.cc
    apprender/asyncviewerapplication.h
    apprender/platformconfig.h
    apprender/renderapplication.cc
    apprender/renderapplication.h
    apprender/viewerapplication.cc
    apprender/viewerapplication.h
    asyncgraphics/asyncgraphicshandler.cc
    asyncgraphics/asyncgraphicshandler.h
    asyncgraphics/asyncgraphicsinterface.cc
    asyncgraphics/asyncgraphicsinterface.h
    asyncgraphics/cameraentityproxy.cc
    asyncgraphics/cameraentityproxy.h
    asyncgraphics/displayproxy.cc
    asyncgraphics/displayproxy.h
    asyncgraphics/graphicsentityproxy.cc
    asyncgraphics/graphicsentityproxy.h
    asyncgraphics/graphicsserverproxy.cc
    asyncgraphics/graphicsserverproxy.h
    asyncgraphics/handle.h
    asyncgraphics/protocol.cc
    asyncgraphics/protocol.h
    asyncgraphics/protocol.nidl
    asyncgraphics/stageproxy.cc
    asyncgraphics/stageproxy.h
    asyncgraphics/viewproxy.cc
    asyncgraphics/viewproxy.h
    coregraphics/adapter.cc
    coregraphics/adapter.h
    coregraphics/adapterinfo.h
    coregraphics/antialiasquality.cc
    coregraphics/antialiasquality.h
    coregraphics/base/displaydevicebase.cc
    coregraphics/base/displaydevicebase.h
    coregraphics/base/indexbufferbase.cc
    coregraphics/base/indexbufferbase.h
    coregraphics/base/memoryindexbufferloaderbase.cc
    coregraphics/base/memoryindexbufferloaderbase.h
    coregraphics/base/memoryvertexbufferloaderbase.cc
    coregraphics/base/memoryvertexbufferloaderbase.h
    coregraphics/base/meshbase.cc
    coregraphics/base/meshbase.h
    coregraphics/base/renderdevicebase.cc
    coregraphics/base/renderdevicebase.h
    coregraphics/base/rendertargetbase.cc
    coregraphics/base/rendertargetbase.h
    coregraphics/base/resourcebase.cc
    coregraphics/base/resourcebase.h
    coregraphics/base/shaderbase.cc
    coregraphics/base/shaderbase.h
    coregraphics/base/shaderinstancebase.cc
    coregraphics/base/shaderinstancebase.h
    coregraphics/base/shaderserverbase.cc
    coregraphics/base/shaderserverbase.h
    coregraphics/base/shadervariablebase.cc
    coregraphics/base/shadervariablebase.h
    coregraphics/base/shadervariableinstancebase.cc
    coregraphics/base/shadervariableinstancebase.h
    coregraphics/base/shadervariationbase.cc
    coregraphics/base/shadervariationbase.h
    coregraphics/base/shaperendererbase.cc
    coregraphics/base/shaperendererbase.h
    coregraphics/base/streamtexturesaverbase.cc
    coregraphics/base/streamtexturesaverbase.h
    coregraphics/base/texturebase.cc
    coregraphics/base/texturebase.h
    coregraphics/base/transformdevicebase.cc
    coregraphics/base/transformdevicebase.h
    coregraphics/base/vertexbufferbase.cc
    coregraphics/base/vertexbufferbase.h
    coregraphics/base/vertexlayoutbase.cc
    coregraphics/base/vertexlayoutbase.h
    coregraphics/batchtype.h
    coregraphics/config.h
    coregraphics/cpuindexbuffer.cc
    coregraphics/cpuindexbuffer.h
    coregraphics/cpumemoryindexbufferloader.cc
    coregraphics/cpumemoryindexbufferloader.h
    coregraphics/cpumemoryvertexbufferloader.cc
    coregraphics/cpumemoryvertexbufferloader.h
    coregraphics/cpuvertexbuffer.cc
    coregraphics/cpuvertexbuffer.h
    coregraphics/debug/displaypagehandler.cc
    coregraphics/debug/displaypagehandler.h
    coregraphics/debug/meshpagehandler.cc
    coregraphics/debug/meshpagehandler.h
    coregraphics/debug/shaderpagehandler.cc
    coregraphics/debug/shaderpagehandler.h
    coregraphics/debug/texturepagehandler.cc
    coregraphics/debug/texturepagehandler.h
    coregraphics/displaydevice.cc
    coregraphics/displaydevice.h
    coregraphics/displayevent.h
    coregraphics/displayeventhandler.cc
    coregraphics/displayeventhandler.h
    coregraphics/displaymode.h
    coregraphics/imagefileformat.cc
    coregraphics/imagefileformat.h
    coregraphics/indexbuffer.cc
    coregraphics/indexbuffer.h
    coregraphics/indextype.h
    coregraphics/legacy/nax2streamreader.cc
    coregraphics/legacy/nax2streamreader.h
    coregraphics/legacy/nvx2streamreader.cc
    coregraphics/legacy/nvx2streamreader.h
    coregraphics/memoryindexbufferloader.cc
    coregraphics/memoryindexbufferloader.h
    coregraphics/memoryvertexbufferloader.cc
    coregraphics/memoryvertexbufferloader.h
    coregraphics/mesh.cc
    coregraphics/mesh.h
    coregraphics/pixelformat.cc
    coregraphics/pixelformat.h
    coregraphics/preshader.cc
    coregraphics/preshader.h
    coregraphics/primitivegroup.h
    coregraphics/primitivetopology.cc
    coregraphics/primitivetopology.h
    coregraphics/renderdevice.cc
    coregraphics/renderdevice.h
    coregraphics/renderevent.h
    coregraphics/rendereventhandler.cc
    coregraphics/rendereventhandler.h
    coregraphics/rendertarget.cc
    coregraphics/rendertarget.h
    coregraphics/shader.cc
    coregraphics/shader.h
    coregraphics/shaderfeature.cc
    coregraphics/shaderfeature.h
    coregraphics/shaderinstance.cc
    coregraphics/shaderinstance.h
    coregraphics/shaderserver.cc
    coregraphics/shaderserver.h
    coregraphics/shadervariable.cc
    coregraphics/shadervariable.h
    coregraphics/shadervariableinstance.cc
    coregraphics/shadervariableinstance.h
    coregraphics/shadervariation.cc
    coregraphics/shadervariation.h
    coregraphics/shaperenderer.cc
    coregraphics/shaperenderer.h
    coregraphics/streamanimationloader.cc
    coregraphics/streamanimationloader.h
    coregraphics/streammeshloader.cc
    coregraphics/streammeshloader.h
    coregraphics/streamshaderloader.cc
    coregraphics/streamshaderloader.h
    coregraphics/streamtextureloader.cc
    coregraphics/streamtextureloader.h
    coregraphics/streamtexturesaver.cc
    coregraphics/streamtexturesaver.h
    coregraphics/texture.cc
    coregraphics/texture.h
    coregraphics/threadsafedisplayeventhandler.cc
    coregraphics/threadsafedisplayeventhandler.h
    coregraphics/threadsaferendereventhandler.cc
    coregraphics/threadsaferendereventhandler.h
    coregraphics/transformdevice.cc
    coregraphics/transformdevice.h
    coregraphics/vertexbuffer.cc
    coregraphics/vertexbuffer.h
    coregraphics/vertexcomponent.h
    coregraphics/vertexlayout.cc
    coregraphics/vertexlayout.h
    coregraphics/vertexlayoutserver.cc
    coregraphics/vertexlayoutserver.h
    frame/framebatch.cc
    frame/framebatch.h
    frame/framepass.cc
    frame/framepass.h
    frame/frameposteffect.cc
    frame/frameposteffect.h
    frame/frameserver.cc
    frame/frameserver.h
    frame/frameshader.cc
    frame/frameshader.h
    frame/frameshaderloader.cc
    frame/frameshaderloader.h
    frame/lightingmode.cc
    frame/lightingmode.h
    frame/sortingmode.cc
    frame/sortingmode.h
    graphics/actorentity.cc
    graphics/actorentity.h
    graphics/cameraentity.cc
    graphics/cameraentity.h
    graphics/cell.cc
    graphics/cell.h
    graphics/graphicsentity.cc
    graphics/graphicsentity.h
    graphics/graphicsserver.cc
    graphics/graphicsserver.h
    graphics/modelentity.cc
    graphics/modelentity.h
    graphics/quadtreestagebuilder.cc
    graphics/quadtreestagebuilder.h
    graphics/simplestagebuilder.cc
    graphics/simplestagebuilder.h
    graphics/stage.cc
    graphics/stage.h
    graphics/stagebuilder.cc
    graphics/stagebuilder.h
    graphics/view.cc
    graphics/view.h
    input/base/gamepadbase.cc
    input/base/gamepadbase.h
    input/base/inputserverbase.cc
    input/base/inputserverbase.h
    input/base/keyboardbase.cc
    input/base/keyboardbase.h
    input/base/mousebase.cc
    input/base/mousebase.h
    input/char.h
    input/gamepad.cc
    input/gamepad.h
    input/inputevent.h
    input/inputhandler.cc
    input/inputhandler.h
    input/inputpriority.h
    input/inputserver.cc
    input/inputserver.h
    input/key.cc
    input/key.h
    input/keyboard.cc
    input/keyboard.h
    input/mouse.cc
    input/mouse.h
    input/mousebutton.cc
    input/mousebutton.h
    lighting/abstractlightentity.cc
    lighting/abstractlightentity.h
    lighting/base/lightserverbase.cc
    lighting/base/lightserverbase.h
    lighting/base/shadowserverbase.cc
    lighting/base/shadowserverbase.h
    lighting/globallightentity.cc
    lighting/globallightentity.h
    lighting/lightserver.cc
    lighting/lightserver.h
    lighting/lighttype.h
    lighting/shadowserver.cc
    lighting/shadowserver.h
    lighting/sm30/pssmutil.cc
    lighting/sm30/pssmutil.h
    lighting/sm30/sm30lightserver.cc
    lighting/sm30/sm30lightserver.h
    lighting/sm30/sm30shadowserver.cc
    lighting/sm30/sm30shadowserver.h
    lighting/spotlightentity.cc
    lighting/spotlightentity.h
    models/attributes.cc
    models/attributes.h
    models/load/binarymodelreader.cc
    models/load/binarymodelreader.h
    models/load/modelreader.cc
    models/load/modelreader.h
    models/load/n2modelreader.cc
    models/load/n2modelreader.h
    models/load/streammodelloader.cc
    models/load/streammodelloader.h
    models/load/xmlmodelreader.cc
    models/load/xmlmodelreader.h
    models/managedmodel.cc
    models/managedmodel.h
    models/model.cc
    models/model.h
    models/modelinstance.cc
    models/modelinstance.h
    models/modelnode.cc
    models/modelnode.h
    models/modelnodeinstance.cc
    models/modelnodeinstance.h
    models/modelnodetype.cc
    models/modelnodetype.h
    models/modelserver.cc
    models/modelserver.h
    models/nodes/characternode.cc
    models/nodes/characternode.h
    models/nodes/characternodeinstance.cc
    models/nodes/characternodeinstance.h
    models/nodes/particlesystemnode.cc
    models/nodes/particlesystemnode.h
    models/nodes/particlesystemnodeinstance.cc
    models/nodes/particlesystemnodeinstance.h
    models/nodes/shapenode.cc
    models/nodes/shapenode.h
    models/nodes/shapenodeinstance.cc
    models/nodes/shapenodeinstance.h
    models/nodes/skinshapenode.cc
    models/nodes/skinshapenode.h
    models/nodes/skinshapenodeinstance.cc
    models/nodes/skinshapenodeinstance.h
    models/nodes/statenode.cc
    models/nodes/statenode.h
    models/nodes/statenodeinstance.cc
    models/nodes/statenodeinstance.h
    models/nodes/transformnode.cc
    models/nodes/transformnode.h
    models/nodes/transformnodeinstance.cc
    models/nodes/transformnodeinstance.h
    models/save/binarymodelwriter.cc
    models/save/binarymodelwriter.h
    models/save/modelwriter.cc
    models/save/modelwriter.h
    models/save/xmlmodelwriter.cc
    models/save/xmlmodelwriter.h
    models/visresolvecontainer.h
    models/visresolver.cc
    models/visresolver.h
    preshaders/boxfilterkernel.cc
    preshaders/boxfilterkernel.h
    preshaders/gaussianblur5x5filterkernel.cc
    preshaders/gaussianblur5x5filterkernel.h
    preshaders/preshaders.h
    render.h
    renderutil/mayacamerautil.cc
    renderutil/mayacamerautil.h
    resources/dynamicmeshresourceloader.cc
    resources/dynamicmeshresourceloader.h
    resources/managedmesh.cc
    resources/managedmesh.h
    resources/managedresource.cc
    resources/managedresource.h
    resources/managedtexture.cc
    resources/managedtexture.h
    resources/resource.cc
    resources/resource.h
    resources/resourceid.h
    resources/resourceloader.cc
    resources/resourceloader.h
    resources/resourcemanager.cc
    resources/resourcemanager.h
    resources/resourcemapper.cc
    resources/resourcemapper.h
    resources/resourcesaver.cc
    resources/resourcesaver.h
    resources/sharedresourceserver.cc
    resources/sharedresourceserver.h
    resources/simpleresourcemapper.cc
    resources/simpleresourcemapper.h
    stdneb.cc
    stdneb.h
)

IF(WIN32)
    SET(Nebula3Render_SRCS
        ${Nebula3Render_SRCS}
        coregraphics/d3d9/d3d9displaydevice.cc
        coregraphics/d3d9/d3d9displaydevice.h
        coregraphics/d3d9/d3d9indexbuffer.cc
        coregraphics/d3d9/d3d9indexbuffer.h
        coregraphics/d3d9/d3d9memoryindexbufferloader.cc
        coregraphics/d3d9/d3d9memoryindexbufferloader.h
        coregraphics/d3d9/d3d9memoryvertexbufferloader.cc
        coregraphics/d3d9/d3d9memoryvertexbufferloader.h
        coregraphics/d3d9/d3d9renderdevice.cc
        coregraphics/d3d9/d3d9renderdevice.h
        coregraphics/d3d9/d3d9rendertarget.cc
        coregraphics/d3d9/d3d9rendertarget.h
        coregraphics/d3d9/d3d9shader.cc
        coregraphics/d3d9/d3d9shader.h
        coregraphics/d3d9/d3d9shaderinstance.cc
        coregraphics/d3d9/d3d9shaderinstance.h
        coregraphics/d3d9/d3d9shaderserver.cc
        coregraphics/d3d9/d3d9shaderserver.h
        coregraphics/d3d9/d3d9shadervariable.cc
        coregraphics/d3d9/d3d9shadervariable.h
        coregraphics/d3d9/d3d9shadervariation.cc
        coregraphics/d3d9/d3d9shadervariation.h
        coregraphics/d3d9/d3d9shaperenderer.cc
        coregraphics/d3d9/d3d9shaperenderer.h
        coregraphics/d3d9/d3d9streamshaderloader.cc
        coregraphics/d3d9/d3d9streamshaderloader.h
        coregraphics/d3d9/d3d9streamtextureloader.cc
        coregraphics/d3d9/d3d9streamtextureloader.h
        coregraphics/d3d9/d3d9streamtexturesaver.cc
        coregraphics/d3d9/d3d9streamtexturesaver.h
        coregraphics/d3d9/d3d9texture.cc
        coregraphics/d3d9/d3d9texture.h
        coregraphics/d3d9/d3d9transformdevice.cc
        coregraphics/d3d9/d3d9transformdevice.h
        coregraphics/d3d9/d3d9types.h
        coregraphics/d3d9/d3d9vertexbuffer.cc
        coregraphics/d3d9/d3d9vertexbuffer.h
        coregraphics/d3d9/d3d9vertexlayout.cc
        coregraphics/d3d9/d3d9vertexlayout.h
        coregraphics/win32/win32displaydevice.cc
        coregraphics/win32/win32displaydevice.h
        input/win32/win32inputdisplayeventhandler.cc
        input/win32/win32inputdisplayeventhandler.h
        input/win32/win32inputserver.cc
        input/win32/win32inputserver.h
        input/win32/win32mouse.cc
        input/win32/win32mouse.h
        input/xinput/xinputgamepad.cc
        input/xinput/xinputgamepad.h
       )
ENDIF(WIN32)

IF(APPLE)
    SET(Nebula3Render_SRCS
        ${Nebula3Render_SRCS}
       )
ENDIF(APPLE)


SOURCE_GROUP(AppRender REGULAR_EXPRESSION apprender/.*)
SOURCE_GROUP(AsyncGraphics REGULAR_EXPRESSION asyncgraphics/.*)
SOURCE_GROUP(CoreGraphics REGULAR_EXPRESSION coregraphics/.*)
SOURCE_GROUP(Frame REGULAR_EXPRESSION frame/.*)
SOURCE_GROUP(Graphics REGULAR_EXPRESSION graphics/.*)
SOURCE_GROUP(Input REGULAR_EXPRESSION input/.*)
SOURCE_GROUP(Lighting REGULAR_EXPRESSION lighting/.*)
SOURCE_GROUP(Models REGULAR_EXPRESSION models/.*)
SOURCE_GROUP(Preshaders REGULAR_EXPRESSION preshaders/.*)
SOURCE_GROUP(RenderUtil REGULAR_EXPRESSION renderutil/.*)
SOURCE_GROUP(Resources REGULAR_EXPRESSION resources/.*)

ADD_LIBRARY(Nebula3Render ${Nebula3Render_SRCS})

