ADD_LIBRARY(Nebula3Lua
    lapi.cc
    lapi.h
    lauxlib.cc
    lauxlib.h
    lbaselib.cc
    lcode.cc
    lcode.h
    ldblib.cc
    ldebug.cc
    ldebug.h
    ldo.cc
    ldo.h
    ldump.cc
    lfunc.cc
    lfunc.h
    lgc.cc
    lgc.h
    linit.cc
    llex.cc
    llex.h
    llimits.h
    lmathlib.cc
    lmem.cc
    lmem.h
    lobject.cc
    lobject.h
    lopcodes.cc
    lopcodes.h
    lparser.cc
    lparser.h
    lstate.cc
    lstate.h
    lstring.cc
    lstring.h
    lstrlib.cc
    ltable.cc
    ltable.h
    ltablib.cc
    ltm.cc
    ltm.h
    lua.h
    luaconf.h
    lualib.h
    lundump.cc
    lundump.h
    lvm.cc
    lvm.h
    lzio.cc
    lzio.h
)
