INCLUDE_DIRECTORIES(
    ${Nebula3_SOURCE_DIR}
    ${Nebula3_SOURCE_DIR}/foundation
    ${Nebula3_SOURCE_DIR}/extlibs
    ${Nebula3_SOURCE_DIR}/tests
)

IF(APPLE)
    FIND_LIBRARY(CORE_FOUNDATION_LIBRARY CoreFoundation)
    MARK_AS_ADVANCED(CORE_FOUNDATION_LIBRARY)
    SET(EXTRA_LIBS ${CORE_FOUNDATION_LIBRARY})
ENDIF(APPLE)

LINK_LIBRARIES(Nebula3Foundation Nebula3ZLib Nebula3Lua Nebula3TinyXML Nebula3TestBase ${EXTRA_LIBS})
ADD_EXECUTABLE(testfoundation
    arraytest.cc
    arraytest.h
    atomtest.cc
    atomtest.h
    attributecontainertest.cc
    attributecontainertest.h
    attributetabletest.cc
    attributetabletest.h
    binaryreaderwritertest.cc
    binaryreaderwritertest.h
    cmdlineargstest.cc
    cmdlineargstest.h
    dictionarytest.cc
    dictionarytest.h
    fileservertest.cc
    fileservertest.h
    fixedarraytest.cc
    fixedarraytest.h
    fixedtabletest.cc
    fixedtabletest.h
    float4test.cc
    float4test.h
    guidtest.cc
    guidtest.h
    hashtabletest.cc
    hashtabletest.h
    iointerfacetest.cc
    iointerfacetest.h
    listtest.cc
    listtest.h
    luaservertest.cc
    luaservertest.h
    main.cc
    matrix44test.cc
    matrix44test.h
    mediatypetest.cc
    mediatypetest.h
    memorystreamtest.cc
    memorystreamtest.h
    messagereaderwritertest.cc
    messagereaderwritertest.h
    proxytest.cc
    proxytest.h
    queuetest.cc
    queuetest.h
    simpletreetest.cc
    simpletreetest.h
    stacktest.cc
    stacktest.h
    streamservertest.cc
    streamservertest.h
    stringtest.cc
    stringtest.h
    testattrs.cc
    testattrs.h
    textreaderwritertest.cc
    textreaderwritertest.h
    threadtest.cc
    threadtest.h
    uritest.cc
    uritest.h
    varianttest.cc
    varianttest.h
    xmlreaderwritertest.cc
    xmlreaderwritertest.h
    zipfstest.cc
    zipfstest.h
)
